# simcraft

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  server-setup-readme.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  desktop-build-platform.yml  desktop-build.yml  desktop-macos.yml  desktop-release.yml
backend/: Cargo.toml  Dockerfile  config.py  database.py  main.py  models.py  requirements.txt  schemas.py
backend/core/: season-config.json
backend/resources/data/: fetch-data.sh
backend/routers/: items.py  sim.py
backend/server/: Dockerfile
backend/services/: addon_parser.py  profileset_generator.py  result_parser.py  simc.py
backend/worker/: tasks.py
desktop/: Dockerfile.linux  Dockerfile.resources  copy-frontend.js  generate-latest.js  main.js  package.json
desktop/scripts/: dev.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  server.rs  simc_runner.rs
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: DesktopAppLink.tsx  ErrorBoundary.tsx  FightStyleSelector.tsx  ResultsChart.tsx  SettingsPopover.tsx  SimContext.tsx  SimForm.tsx  SimStatus.tsx  SimTypeCards.tsx  StatWeightsTable.tsx  TalentPicker.tsx  TopGearItemSelector.tsx  TopGearResults.tsx  UpdateChecker.tsx  WindowTitlebar.tsx
frontend/src/app/drop-finder/: page.tsx
frontend/src/app/lib/: api.ts  parseAddonString.ts  (+2 more)
(+12 files in other folders)
