[package]
name = "simhammer"
version = "0.4.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
regex = "1"
tempfile = "3"
portpicker = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
